force-app/main/default/objects/Assigned_Volunteer__c/fields/Absent__c.field-meta.xml
<CustomField>
    <fullName>Absent__c</fullName>
    <label>Absent</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>