force-app/main/default/objects/Assigned_Volunteer__c/fields/Assignee_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Status__c</fullName>
    <label>Assignee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selected</fullName>
                <default>true</default>
                <label>Selected</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
                <isActive>false</isActive>
                <label>Declined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>