force-app/main/default/objects/Assigned_Volunteer__c/fields/Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Status__c</fullName>
    <formula>TEXT(Volunteer_Request__r.Assignment_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Status</label>
    <type>Text</type>
</CustomField>