force-app/main/default/objects/Assigned_Volunteer__c/fields/Auto_Gen_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Auto_Gen_Timesheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Gen Timesheet</label>
    <type>Checkbox</type>
</CustomField>