force-app/main/default/objects/Assigned_Volunteer__c/fields/Cancellation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Sent</label>
    <type>Checkbox</type>
</CustomField>