force-app/main/default/objects/Assigned_Volunteer__c/fields/Client_Household_Name_upload__c.field-meta.xml
<CustomField>
    <fullName>Client_Household_Name_upload__c</fullName>
    <label>Client Household Name (upload)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>