force-app/main/default/objects/Assigned_Volunteer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assigned Volunteers</relationshipLabel>
    <relationshipName>Assigned_Volunteers</relationshipName>
    <type>Lookup</type>
</CustomField>