force-app/main/default/objects/Assigned_Volunteer__c/fields/Description_of_Task__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Task__c</fullName>
    <label>Description of Task</label>
    <type>TextArea</type>
</CustomField>