force-app/main/default/objects/Assigned_Volunteer__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <label>Email Sent</label>
    <type>Date</type>
</CustomField>