force-app/main/default/objects/Assigned_Volunteer__c/fields/Email_upload__c.field-meta.xml
<CustomField>
    <fullName>Email_upload__c</fullName>
    <label>Email (upload)</label>
    <type>Email</type>
</CustomField>