force-app/main/default/objects/Assigned_Volunteer__c/fields/End_Formula__c.field-meta.xml
<CustomField>
    <fullName>End_Formula__c</fullName>
    <formula>Volunteer_Request__r.End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Formula</label>
    <type>Time</type>
</CustomField>