force-app/main/default/objects/Assigned_Volunteer__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>End Date_Old</label>
    <type>Date</type>
</CustomField>