force-app/main/default/objects/Assigned_Volunteer__c/fields/EndDateF__c.field-meta.xml
<CustomField>
    <fullName>EndDateF__c</fullName>
    <formula>Volunteer_Request__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>