force-app/main/default/objects/Assigned_Volunteer__c/fields/First_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Assignment_Date__c</fullName>
    <label>First Assignment Date</label>
    <type>Date</type>
</CustomField>