force-app/main/default/objects/Assigned_Volunteer__c/fields/Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Type__c</fullName>
    <formula>TEXT(Volunteer_Request__r.Frequency_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequency Type</label>
    <type>Text</type>
</CustomField>