force-app/main/default/objects/Assigned_Volunteer__c/fields/FVolunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>FVolunteer_Hours__c</fullName>
    <formula>Volunteer_Hours__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>