force-app/main/default/objects/Assigned_Volunteer__c/fields/General_Remarks__c.field-meta.xml
<CustomField>
    <fullName>General_Remarks__c</fullName>
    <label>General Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>