force-app/main/default/objects/Assigned_Volunteer__c/fields/Invitation_URL__c.field-meta.xml
<CustomField>
    <fullName>Invitation_URL__c</fullName>
    <formula>$Label.Landing_URL +&quot;volunteer-request?id=&quot;+ Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invitation URL</label>
    <type>Text</type>
</CustomField>