force-app/main/default/objects/Assigned_Volunteer__c/fields/Key_Objective__c.field-meta.xml
<CustomField>
    <fullName>Key_Objective__c</fullName>
    <formula>Volunteer_Request__r.Key_Objective__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Objective</label>
    <type>Text</type>
</CustomField>