force-app/main/default/objects/Assigned_Volunteer__c/fields/Last_Checked_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Checked_Date__c</fullName>
    <label>Last Checked Date</label>
    <type>Date</type>
</CustomField>