force-app/main/default/objects/Assigned_Volunteer__c/fields/No_of_Absent__c.field-meta.xml
<CustomField>
    <fullName>No_of_Absent__c</fullName>
    <formula>No_of_Sched__c - No_of_Attend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Absent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>