force-app/main/default/objects/Assigned_Volunteer__c/fields/No_of_Attend__c.field-meta.xml
<CustomField>
    <fullName>No_of_Attend__c</fullName>
    <label>No of Attend</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>