force-app/main/default/objects/Assigned_Volunteer__c/fields/No_of_Consecutive_Absent__c.field-meta.xml
<CustomField>
    <fullName>No_of_Consecutive_Absent__c</fullName>
    <label>No of Consecutive Non-Attendance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>