force-app/main/default/objects/Assigned_Volunteer__c/fields/One_Time_Timesheet_Generated__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Timesheet_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Time Timesheet Generated</label>
    <type>Checkbox</type>
</CustomField>