force-app/main/default/objects/Assigned_Volunteer__c/fields/Open_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Open_Remarks__c</fullName>
    <label>Open Remarks</label>
    <type>TextArea</type>
</CustomField>