force-app/main/default/objects/Assigned_Volunteer__c/fields/Participant_s_Role__c.field-meta.xml
<CustomField>
    <fullName>Participant_s_Role__c</fullName>
    <label>Participant&apos;s Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer</fullName>
                <default>true</default>
                <label>Volunteer</label>
            </value>
            <value>
                <fullName>Caterer</fullName>
            </value>
            <value>
                <fullName>Counselor</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Facilitator</fullName>
            </value>
            <value>
                <fullName>Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>