force-app/main/default/objects/Assigned_Volunteer__c/fields/Program_Evenent_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Evenent_Name__c</fullName>
    <formula>Volunteer_Request__r.Name</formula>
    <label>Program.Evenent Name</label>
    <type>Text</type>
</CustomField>