force-app/main/default/objects/Assigned_Volunteer__c/fields/Programme_Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Programme_Event_Status__c</fullName>
    <formula>TEXT(Volunteer_Request__r.Programme_Event__r.Programme_Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programme/Event Status</label>
    <type>Text</type>
</CustomField>