force-app/main/default/objects/Assigned_Volunteer__c/fields/Programme_Name__c.field-meta.xml
<CustomField>
    <fullName>Programme_Name__c</fullName>
    <formula>Volunteer_Request__r.Programme_Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programme Name</label>
    <type>Text</type>
</CustomField>