force-app/main/default/objects/Assigned_Volunteer__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <label>Rejected Date</label>
    <type>Date</type>
</CustomField>