force-app/main/default/objects/Assigned_Volunteer__c/fields/Sent_Notification__c.field-meta.xml
<CustomField>
    <fullName>Sent_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Notification</label>
    <type>Checkbox</type>
</CustomField>