force-app/main/default/objects/Assigned_Volunteer__c/fields/Start_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Formula__c</fullName>
    <formula>Volunteer_Request__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Formula</label>
    <type>Date</type>
</CustomField>