force-app/main/default/objects/Assigned_Volunteer__c/fields/Start_Formula__c.field-meta.xml
<CustomField>
    <fullName>Start_Formula__c</fullName>
    <formula>Volunteer_Request__r.Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Formula</label>
    <type>Time</type>
</CustomField>