force-app/main/default/objects/Assigned_Volunteer__c/fields/Testing_field__c.field-meta.xml
<CustomField>
    <fullName>Testing_field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing_field for work flow</description>
    <label>Testing field</label>
    <type>Checkbox</type>
</CustomField>