force-app/main/default/objects/Assigned_Volunteer__c/fields/UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdentifier__c</fullName>
    <formula>Contact__c +&apos;|&apos;+ Volunteer_Request__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueIdentifier</label>
    <type>Text</type>
</CustomField>