force-app/main/default/objects/Assigned_Volunteer__c/fields/V_Sat_Respond__c.field-meta.xml
<CustomField>
    <fullName>V_Sat_Respond__c</fullName>
    <label>V-Sat Respond</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Very Bad</fullName>
            </value>
            <value>
                <fullName>2-Bad</fullName>
            </value>
            <value>
                <fullName>3-Neutral</fullName>
            </value>
            <value>
                <fullName>4-Good</fullName>
            </value>
            <value>
                <fullName>5-Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>