force-app/main/default/objects/Assigned_Volunteer__c/fields/V_Sat_Respond_Formula__c.field-meta.xml
<CustomField>
    <fullName>V_Sat_Respond_Formula__c</fullName>
    <formula>IF(ISPICKVAL( V_Sat_Respond__c , &quot;1&quot;),1,
IF(ISPICKVAL( V_Sat_Respond__c , &quot;2&quot;),2,
IF(ISPICKVAL( V_Sat_Respond__c , &quot;3&quot;),3,
IF(ISPICKVAL( V_Sat_Respond__c , &quot;4&quot;),4,
IF(ISPICKVAL( V_Sat_Respond__c , &quot;5&quot;),5,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>V-Sat Respond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>