force-app/main/default/objects/Assigned_Volunteer__c/fields/Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours__c</fullName>
    <label>Volunteer Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>