force-app/main/default/objects/Assigned_Volunteer__c/fields/Volunteer_Manager__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Manager__c</fullName>
    <formula>Volunteer_Request__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Volunteer_Request__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Manager</label>
    <type>Text</type>
</CustomField>