force-app/main/default/objects/Assigned_Volunteer__c/fields/Volunteer_Name_upload__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Name_upload__c</fullName>
    <label>Volunteer Name (upload)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>