force-app/main/default/objects/Assigned_Volunteer__c/fields/Volunteer_Request__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Request__c</fullName>
    <label>Activity/Event</label>
    <referenceTo>Volunteer_Request__c</referenceTo>
    <relationshipLabel>Assigned Volunteers</relationshipLabel>
    <relationshipName>Assigned_Volunteers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>