force-app/main/default/objects/Assigned_Volunteer__c/fields/Withdrawn_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdrawn_Date__c</fullName>
    <label>Withdrawn Date</label>
    <type>Date</type>
</CustomField>