force-app/main/default/objects/Assigned_Volunteer__c/validationRules/Validate_Volunteer_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Volunteer_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISNEW()) ,  Contact__c != PRIORVALUE(Contact__c ))</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Can&apos;t change the volunteer name.</errorMessage>
</ValidationRule>