force-app/main/default/objects/Assigned_Volunteer__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Volunteer_Request__c</columns>
    <columns>Frequency__c</columns>
    <columns>Assignee_Status__c</columns>
    <columns>Accepted_Date__c</columns>
    <columns>Cancelled_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Date__c</columns>
    <columns>End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>Checked In Volunteers</label>
</ListView>